--- a/app_assets/scss/settings/_bootstrap.scss
+++ b/app_assets/scss/settings/_bootstrap.scss
@@ -75,7 +75,7 @@ $headings-color:          inherit;
 //** Load fonts from this directory.
 
 // [converter] Asset helpers such as Sprockets and Node.js Mincer do not resolve relative paths
-$icon-font-path: "/app_assets/vendor/bootstrap/fonts/";
+$icon-font-path: "/Lab2014.SinglePageApp/app_assets/vendor/bootstrap/fonts/";
 
 //** File name for all font files.
 $icon-font-name:          "glyphicons-halflings-regular";
