--- a/app_assets/scss/settings/_font-awesome.scss
+++ b/app_assets/scss/settings/_font-awesome.scss
@@ -1,4 +1,4 @@
 // Variables
 // --------------------------
 
-$fa-font-path: "/app_assets/vendor/font-awesome/fonts";
+$fa-font-path: "/Lab2014.SinglePageApp/app_assets/vendor/font-awesome/fonts";
