--- a/app_assets/js/module/Slide/View/templates/index.html
+++ b/app_assets/js/module/Slide/View/templates/index.html
@@ -1,3 +1,6 @@
+<div class="page-header">
+    <h2>Slides</h2>
+</div>
 <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
         <iframe src="//www.slideshare.net/slideshow/embed_code/40440906" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen></iframe>
@@ -6,3 +9,4 @@
         </div>
     </div>
 </div>
+<hr>
