--- a/app_assets/js/module/Download/View/templates/index.html
+++ b/app_assets/js/module/Download/View/templates/index.html
@@ -1,4 +1,32 @@
 <div class="page-header">
     <h2>Downloads</h2>
 </div>
+<div class="row">
+    <div class="col-sm-4 col-sm-offset-4">
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-0-start.zip" download="Lab2014.SinglePageApp-part-0-start.zip">
+            <span class="fa fa-download"></span> Part 0 - Start
+        </a>
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-1-domain.zip" download="Lab2014.SinglePageApp-part-1-domain.zip">
+            <span class="fa fa-download"></span> Part 1 - Domain
+        </a>
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-2-data.zip" download="Lab2014.SinglePageApp-part-2-data.zip">
+            <span class="fa fa-download"></span> Part 2 - Data
+        </a>
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-3-page.zip" download="Lab2014.SinglePageApp-part-3-page.zip">
+            <span class="fa fa-download"></span> Part 3 - Page
+        </a>
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-4-index.zip" download="Lab2014.SinglePageApp-part-4-index.zip">
+            <span class="fa fa-download"></span> Part 4 - Index
+        </a>
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-5-show.zip" download="Lab2014.SinglePageApp-part-5-show.zip">
+            <span class="fa fa-download"></span> Part 5 - Show
+        </a>
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-6-crud.zip" download="Lab2014.SinglePageApp-part-6-crud.zip">
+            <span class="fa fa-download"></span> Part 6 - CRUD
+        </a>
+        <a class="btn btn-lg btn-block btn-default" href="https://github.com/ASNApalooza/Lab2014.SinglePageApp/archive/part-7-backbone.zip" download="Lab2014.SinglePageApp-part-7-backbone.zip">
+            <span class="fa fa-download"></span> Part 7 - Backbone
+        </a>
+    </div>
+</div>
 <hr>
