--- a/app_assets/js/module/Default/View/templates/index.html
+++ b/app_assets/js/module/Default/View/templates/index.html
@@ -6,3 +6,33 @@
         </a>
     </div>
 </div>
+<div class="container">
+    <div class="page-header">
+        <h2>Overview</h2>
+    </div>
+    <p class="lead">
+        This repository contains example code for the ASNApalooza 2014 Lab:<br>
+        &ldquo;Build a Single-Page App with an AVR Web API.&rdquo;
+    </p>
+    <p>
+        This code is provided for learning purposes only and is not meant for
+        production use. This tutorial application does not include authentication,
+        paging, or extensive error handling.
+    </p>
+    <p>
+        The documentation site includes a
+        <a href="/Lab2014.SinglePageApp/#tutorial/part-0-start" data-asna-nav="route:tutorial:start">tutorial</a>,
+        <a href="/Lab2014.SinglePageApp/#downloads" data-asna-nav="route:downloads:index">downloads</a>, and
+        the introductory <a href="/Lab2014.SinglePageApp/#slides" data-asna-nav="route:slides:index">slides</a>.
+        You may also browse the code
+        <a href="https://gist.githubusercontent.com/jrnickell/141bd391b96e7a66d5e1/raw/330c5a9ad0a242ea5f3890cdba21b9bb41e9fedd/SinglePageApp.Snippets">snippets</a>
+        used in the live lab, and the Backbone
+        <a href="https://gist.githubusercontent.com/jrnickell/141bd391b96e7a66d5e1/raw/39b864f702d1841c8831a6d7a9725d017ebb3f8c/Backbone.Snippets">snippets</a>
+        for the JavaScript portion of the project.
+    </p>
+    <hr>
+    <div class="text-center">
+        <a class="btn btn-lg btn-success" href="/Lab2014.SinglePageApp/#tutorial/part-0-start" data-asna-nav="route:tutorial:start">Start the Tutorial</a>
+    </div>
+    <hr>
+</div>
